Automatically wire up the --enable-preview option if necessary (#1033)
sls-packaging will automatically include the `--enable-preview` jvm arg in launcher-static.yml if `com.palantir.baseline-enable-preview-flag` is applied.